--- a/Soccer2/Soccer2.csproj
+++ b/Soccer2/Soccer2.csproj
@@ -12,6 +12,14 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.10" />
+    <PackageReference Include="PuppeteerSharp" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\Implementations\" />
+    <Folder Include="Services\Model\" />
+    <Folder Include="Views\Match\" />
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
 </Project>
