--- a/Soccer2/Soccer2.csproj
+++ b/Soccer2/Soccer2.csproj
@@ -13,10 +13,15 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.32" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.10" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
     <PackageReference Include="PuppeteerSharp" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Team\Controllers\" />
+    <Folder Include="Areas\Team\Data\" />
+    <Folder Include="Areas\Team\Models\" />
+    <Folder Include="Areas\Team\Views\" />
     <Folder Include="Views\Match\" />
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
